# box

./: .ghc.environment.aarch64-darwin-9.14.1  .ghci  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  ChangeLog.md  DEPRECATED.md  box.cabal  box.org  cabal.project  hie.yaml  package.yaml  readme.md  readme.org  stack.yaml
.github/workflows/: haskell-ci.yml
app/: app.hs  concurrency-tests.hs  echo.hs  process.hs  speed.hs  websocket-tests.hs
other/: MeasureTime-1000-1000.perf  TestDefault-1000-1000-MeasureTime.perf
src/: Box.hs  ETC.hs  Etc.hs
src/Box/: Action.hs  Box.hs  Broadcast.hs  Codensity.hs  Committer.hs  Connectors.hs  Cont.hs  Control.hs  Emitter.hs  Functor.hs  IO.hs  Plugs.hs  Queue.hs  SeqQueue.hs  Stream.hs  Time.hs  Transducer.hs  Updater.hs
src/Etc/: Action.hs  Box.hs  Broadcast.hs  Committer.hs  Connectors.hs  Cont.hs  Emitter.hs  IO.hs  Managed.hs  Plugs.hs  Queue.hs  Stream.hs  Time.hs  Transducer.hs  Updater.hs
test/: ctest.hs  doctests.hs  test.hs
