cabal-version: 3.0
name:           box
version:        0.4.0
synopsis:       boxes
description:    concurrent, effectful boxes
category:       project
homepage:       https://github.com/tonyday567/box#readme
bug-reports:    https://github.com/tonyday567/box/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    stack.yaml
    readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/box

library
  exposed-modules:
      Box
      Box.Box
      Box.Broadcast
      Box.Committer
      Box.Connectors
      Box.Cont
      Box.Control
      Box.Emitter
      Box.IO
      Box.Plugs
      Box.Queue
      Box.Stream
      Box.Time
      Box.Transducer
      Box.Updater
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -funbox-strict-fields
  build-depends:
      async >= 2.2
    , attoparsec >= 0.13
    , base >=4.7 && <5
    , concurrency >= 1.11
    , contravariant >= 1.5
    , exceptions >= 0.10
    , foldl >= 1.4
    , lens >= 4.19
    , mmorph >= 1.1
    , profunctors >= 5.5
    , protolude >= 0.3.0 && < 0.4
    , streaming >= 0.2
    , text >= 1.2
    , time >= 1.9
    , transformers >= 0.5
    , transformers-base >= 0.4
    , typed-process >= 0.2
  default-language: Haskell2010

executable concurrency-tests
  main-is: concurrency-tests.hs
  hs-source-dirs:
      app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , box
    , concurrency >= 1.11
    , dejafu >= 2.3
    , generic-lens >= 2.0
    , lens >= 4.19
    , mtl >= 2.2
    , protolude >= 0.3
    , random >= 1.1
    , streaming >= 0.2
    , text >= 1.2
    , transformers >= 0.5
  default-language: Haskell2010

executable websocket-tests
  main-is: websocket-tests.hs
  hs-source-dirs:
      app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
    , box
    , concurrency >= 1.11
    , dejafu >= 2.3
    , generic-lens >= 2.0
    , lens >= 4.19
    , managed >= 1.0
    , mtl >= 2.2
    , protolude >= 0.3
    , random >= 1.1
    , streaming >= 0.2
    , text >= 1.2
    , transformers >= 0.5
    , websockets >= 0.12
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
    base >=4.7 && <5
    , doctest >= 0.16
  default-language: Haskell2010

