cabal-version:  2.4
name:           box
version:        0.6.3
synopsis:       boxes
description:    concurrent, effectful boxes
category:       project
homepage:       https://github.com/tonyday567/box#readme
bug-reports:    https://github.com/tonyday567/box/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day (c) 2017
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  stack.yaml
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/box

library
  exposed-modules:
    Box
    Box.Box
    Box.Committer
    Box.Connectors
    Box.Cont
    Box.Emitter
    Box.IO
    Box.Queue
    Box.Time
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -funbox-strict-fields
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    attoparsec >= 0.13,
    base >=4.7 && <5,
    comonad >= 5.0,
    concurrency >= 1.11,
    containers >= 0.6 && < 0.7,
    contravariant >= 1.5,
    exceptions >= 0.10,
    lens >= 4.19,
    mmorph >= 1.1,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.7 && < 0.8,
    profunctors >= 5.5,
    text >= 1.2,
    time >= 1.9,
    transformers >= 0.5,
    transformers-base >= 0.4,
  default-language: Haskell2010
